# Nautomata

./: .gitignore  LICENSE  Nautomata.cabal  README.md  cabal.project  experiment.cabal
app/: #Main.hs#  Main.hs
src/: Coalgebra.hs  Deterministic.hs  Main.hs  Nondeterministic.hs  Reduction.hs
src/app/: Experiment.hs
