cabal-version:      2.4
name:               Nautomata
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           A library for reducing nominal automata

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andrey Yao, Keri D'Angelo
maintainer:         awy32@cornell.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

extra-doc-files: cabal.project

executable Nautomata
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.4.0 && <=5, NLambda >= 1.1

    hs-source-dirs:   src
    default-language: Haskell2010
