cabal-version:      2.4
name:               Nautomata
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           A library for reducing nominal automata

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andrey Yao, Keri D'Angelo
maintainer:         awy32@cornell.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

extra-doc-files: cabal.project


common boilerplate
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall
  build-depends:      base >=4.16.4.0 && <=5, NLambda >= 1.1


library Reduction
    import:           boilerplate
    hs-source-dirs:   src
    exposed-modules:
                      Reduction
                      Coalgebra


executable Nautomata
    import:           boilerplate
    main-is:          Main.hs
    hs-source-dirs:   app
