cabal-version:      2.4
name:               experiment
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           A library for reducing nominal automata

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andrey Yao, Keri D'Angelo
maintainer:         awy32@cornell.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable experiment
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, NLambda

    hs-source-dirs:   app
    default-language: Haskell2010
